# OpenGL-boilerplate

./: .gitmodules  CMakeLists.txt  README.md
include/: prac.h
src/: main.cpp  prac.cpp
